2022-09-17T16:05:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3073965494
* notice: last 14d: unq all: 6 5391
* notice: prev accum: outdated-unq outdated-all / unq all: 1036 61096 / 1070 66499
* notice: next accum: outdated-unq outdated-all / unq all: 1036 61096 / 1070 66487
* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -0 -133 / +2 +260 -0 -0 / 2 260
* notice: removed / changed dates: [] / [2022-09-03 2022-09-17]

2022-09-17T08:07:21Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3072646057
* notice: last 14d: unq all: 6 5403
* notice: prev accum: outdated-unq outdated-all / unq all: 1036 61096 / 1068 66520
* notice: next accum: outdated-unq outdated-all / unq all: 1036 61096 / 1070 66499
* notice: prev exec diff / last date diff / accum: unq all: +2 +141 -0 -162 / +2 +139 -0 -0 / 2 139
* notice: removed / changed dates: [] / [2022-09-03 2022-09-16 2022-09-17]

2022-09-17T00:30:54Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3071520891
* notice: last 14d: unq all: 6 5424
* notice: prev accum: outdated-unq outdated-all / unq all: 1033 60720 / 1067 66076
* notice: next accum: outdated-unq outdated-all / unq all: 1036 61096 / 1068 66520
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -18 / +2 +406 -0 -0 / 2 406
* notice: removed / changed dates: [2022-09-02] / [2022-09-03 2022-09-16]

2022-09-16T16:07:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3069189434
* notice: last 14d: unq all: 6 5356
* notice: prev accum: outdated-unq outdated-all / unq all: 1033 60720 / 1067 66089
* notice: next accum: outdated-unq outdated-all / unq all: 1033 60720 / 1067 66076
* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -0 -134 / +2 +258 -0 -0 / 2 258