@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-17T16:05:51Z",
-  "count" : 260,
-  "count_minmax" : [ 139, 260 ],
-  "count_decinc" : [ -0, +260 ],
+  "timestamp" : "2022-09-18T00:36:55Z",
+  "count" : 409,
+  "count_minmax" : [ 139, 409 ],
+  "count_decinc" : [ -0, +409 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
