@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-09-17T16:05:51Z",
-  "count_outdated" : 61096,
-  "uniques_outdated" : 1036,
-  "count" : 66487,
+  "timestamp" : "2022-09-18T00:36:55Z",
+  "count_outdated" : 61470,
+  "uniques_outdated" : 1037,
+  "count" : 66930,
   "uniques" : 1070,
   "clones" : [
     {
-      "timestamp": "2022-09-03T00:00:00Z",
-      "count": 61,
-      "count_minmax": [ 61, 374 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-09-04T00:00:00Z",
-      "count": 375,
+      "count": 356,
       "count_minmax": [ 126, 375 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 260,
-      "count_minmax": [ 139, 260 ],
+      "count": 409,
+      "count_minmax": [ 139, 409 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
