@@ -1,3 +1,11 @@
+2022-09-18T00:36:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3075331616
+* notice: last 14d: unq all: 6 5460
+* notice: prev accum: outdated-unq outdated-all / unq all: 1036 61096 / 1070 66487
+* notice: next accum: outdated-unq outdated-all / unq all: 1037 61470 / 1070 66930
+* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -19 / +2 +409 -0 -0 / 2 409
+* notice: removed / changed dates: [2022-09-03] / [2022-09-04 2022-09-17]
+
 2022-09-17T16:05:51Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3073965494
 * notice: last 14d: unq all: 6 5391
